# decent_wasm_test

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: IntelSgxAddTarget.cmake  IntelSgxSdkLibs.cmake  IntelSgxSdkPath.cmake
include/: CMakeLists.txt
include/DecentWasmRuntime/: Exception.hpp  ExecEnvUserData.hpp  FuncUtils.hpp  InstMemPtr.hpp  MainRunner.hpp  SharedObject.hpp  SharedWasmExecEnv.hpp  SharedWasmModule.hpp  SharedWasmModuleInstance.hpp  SharedWasmRuntime.hpp  WamrUniquePtr.hpp  WasmExecEnv.hpp  WasmModule.hpp  WasmModuleInstance.hpp  WasmRuntime.hpp  WasmRuntimeStaticHeap.hpp
include/DecentWasmRuntime/Internal/: make_unique.hpp
src/: CMakeLists.txt  DecentMain.hpp  DecentWasmNatives.cpp  DecentWasmRtSupport.hpp  Enclave.config.xml  Enclave.cpp  Enclave.edl  Instrumentation.hpp  Main.cpp  SystemIO.hpp  TestInstrumentation.cpp  decent_wasi_natives.c  decent_wasm_native_list.txt  decent_wasm_natives.c  instrumentation.js  test.c  test.wasm  test.wat
test/polybench/: 2mm.app  2mm.nopt.wasm  2mm.wasm  3mm.app  3mm.nopt.wasm  3mm.wasm  adi.app  adi.nopt.wasm  adi.wasm  atax.app  atax.nopt.wasm  atax.wasm  bicg.app  bicg.nopt.wasm  bicg.wasm  cholesky.app  cholesky.nopt.wasm  cholesky.wasm  copy-built-wasm.py  correlation.app  correlation.nopt.wasm  correlation.wasm  covariance.app  covariance.nopt.wasm  covariance.wasm  deriche.app  deriche.nopt.wasm  deriche.wasm  doitgen.app  doitgen.nopt.wasm  doitgen.wasm  durbin.app  durbin.nopt.wasm  durbin.wasm  fdtd-2d.app  fdtd-2d.nopt.wasm  fdtd-2d.wasm  floyd-warshall.app  floyd-warshall.nopt.wasm  floyd-warshall.wasm  (+53 more)
test/wasm/: .gitignore  Makefile
test/wasm/include/: DecentWasmApi.hpp  DecentWasmImpl.hpp  decent_wasm_api.h  decent_wasm_impl.h
test/wasm/test-01/: Makefile  test.cpp
test/wasm/test-02/: Makefile  test.cpp
test/wasm/test-03/: Makefile  test.cpp
test/wasm/test-04/: Makefile  test.wat
